Kubernetes_k3s/codeserver/codeserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver-ingress
  namespace: code-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: code-server-codeserver-redirectregex@kubernetescrd,code-server-default-headers@kubernetescrd
spec:
  tls:
  - hosts:
    - YOUR_CODESERVER_URL
    secretName: codeserver-tls-cert
  rules:
  - host: YOUR_CODESERVER_URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server-service # Matches codeserver service name
            port:
              number: 8443 # Matches codeserver service external port
